# Qwen3-TTS-ncnn

./: .gitignore  CMakeLists.txt  README.md
docs/: BENCHMARKS.md  CONVERSION.md  CPP_FRONTEND_PLAN.md  CUSTOMVOICE_AUDIO_SMOKE.md  CUSTOMVOICE_PROMPT_MATRIX.md  FEATURE_MATRIX.md  MODEL_PACKAGE.md  NCNN_LLM_FIT.md
docs/operator_pr_repro/: README.md
docs/operator_pr_repro/patches/: 0001-rotaryembed-vulkan-cache-stride.patch  0002-sdpa-vulkan-broadcast-mask.patch  0003-gelu-vulkan-fast-gelu-param.patch  all-three-vulkan-operator-fixes.patch
samples/: README.md
src/: qwen3_tts_benchmark.cpp  qwen3_tts_code_predictor_loop_check.cpp  qwen3_tts_codepred_kv_check.cpp  qwen3_tts_codes_to_wav_check.cpp  qwen3_tts_decoder_blob_diff.cpp  qwen3_tts_decoder_check.cpp  qwen3_tts_decoder_chunk_check.cpp  qwen3_tts_example.cpp  qwen3_tts_front_check.cpp  qwen3_tts_frontend.cpp  qwen3_tts_frontend.h  qwen3_tts_frontend_check.cpp  qwen3_tts_full_pipeline_check.cpp  qwen3_tts_hidden_decoder_check.cpp  qwen3_tts_mat_check.cpp  qwen3_tts_model_json_check.cpp  qwen3_tts_runtime.cpp  qwen3_tts_runtime.h  qwen3_tts_runtime_codes_to_wav_check.cpp  qwen3_tts_runtime_full_check.cpp  qwen3_tts_talker_external_check.cpp  qwen3_tts_talker_kv_decode_check.cpp  qwen3_tts_talker_loop_check.cpp  qwen3_tts_talker_prefill_check.cpp  qwen_bpe.h  qwen_bpe_dump.cpp
tools/: README.md  add_ncnn_sdpa_kvcache.py  benchmark_qwen3_tts_pytorch.py  dump_qwen3_tts_tokenizer_ref.py  export_qwen3_tts_code_predictor_body.py  export_qwen3_tts_code_predictor_fixed.py  export_qwen3_tts_code_predictor_kv.py  export_qwen3_tts_code_predictor_prefill.py  export_qwen3_tts_code_predictor_structured_weights.py  export_qwen3_tts_decoder.py  export_qwen3_tts_front_weights.py  export_qwen3_tts_frontend_nets.py  export_qwen3_tts_long_ref.py  export_qwen3_tts_prompt_ref.py  export_qwen3_tts_talker_external_rope.py  export_qwen3_tts_talker_multistep.py  export_qwen3_tts_talker_next.py  export_qwen3_tts_talker_prefill.py  export_qwen3_tts_talker_simple_rope.py  export_qwen3_tts_tokenizer_txt.py  export_qwen3_tts_wave_prefix.py  make_qwen3_tts_talker_prefill_dynamic.py  qwen3_tts_customvoice_audio_smoke.py  qwen3_tts_customvoice_prompt_matrix.py  qwen3_tts_probe.py  remove_ncnn_passthrough_tensor_to.py  split_qwen3_tts_codepred_kv_shared.py  time_command.py
